новости, но чёт я хз

--- a/locales/tat.strings
+++ b/locales/tat.strings
@@ -179,116 +179,116 @@
 
 /* Wall */
 
-"feed" = "Новости";
-"post_writes_m" = "написал";
-"post_writes_f" = "написала";
-"post_writes_g" = "опубликовали";
-"post_deact_m" = "удалил страницу со словами:";
-"post_deact_f" = "удалила страницу со словами:";
-"post_deact_g" = "удалили страницу со словами:";
-"post_deact_silent_m" = "молча удалил свою страницу.";
-"post_deact_silent_f" = "молча удалила свою страницу.";
-"post_deact_silent_g" = "молча удалили свою страницу.";
-"post_on_your_wall" = "на вашей стене";
-"post_on_group_wall" = "в $1";
-"post_on_user_wall" = "на стене $1";
+"feed" = "Яңалыклар";
+"post_writes_m" = "язды";
+"post_writes_f" = "язды";
+"post_writes_g" = "нәшер иттеләр";
+"post_deact_m" = "битне түбәндәге сүзләр белән бетерде:";
+"post_deact_f" = "битне түбәндәге сүзләр белән бетерде:";
+"post_deact_g" = "битне түбәндәге сүзләр белән бетерделәр:";
+"post_deact_silent_m" = "битен дәшмичә бетерде.";
+"post_deact_silent_f" = "битен дәшмичә бетерде.";
+"post_deact_silent_g" = "битләрен дәшмичә бетерделәр.";
+"post_on_your_wall" = "сезнең стенада";
+"post_on_group_wall" = "$1 төркемендә";
+"post_on_user_wall" = "$1 стенасында";
 "wall" = "Стена";
-"post" = "Запись";
-"write" = "Написать";
-"publish" = "Опубликовать";
-"delete" = "Удалить";
-"comments" = "Комментарии";
-"share" = "Поделиться";
-"pin" = "Закрепить";
-"unpin" = "Открепить";
-"pinned" = "закреплено";
-"comments_tip" = "Будьте первым, кто оставит комментарий!";
-"your_comment" = "Ваш комментарий";
-"auditory" = "Аудитория";
-"in_wall" = "на стену";
-"in_group" = "в группу";
-"shown" = "Показано";
-"x_out_of" = "$1 из";
-"wall_zero" = "нет записей";
-"wall_one" = "единственная запись";
-"wall_few" = "$1 записи";
-"wall_many" = "$1 записей";
-"wall_other" = "$1 записей";
-"publish_post" = "Добавить запись";
-"view_other_comments" = "Посмотреть остальные комментарии";
-"no_comments" = "Комментарии отсутствуют";
-"my_news" = "Мои новости";
-"all_news" = "Все новости";
-"posts_per_page" = "Количество записей на странице";
-"show_ignored_sources" = "Показывать игнорируемые источники";
-"auto_scroll" = "Автоматическая прокрутка";
-"ajax_routing" = "AJAX-переходы";
-"attachment" = "Вложение";
-"post_as_group" = "От имени сообщества";
-"comment_as_group" = "От имени сообщества";
+"post" = "Язма";
+"write" = "Язарга";
+"publish" = "Нәшер итәргә";
+"delete" = "Бетерергә";
+"comments" = "Фикерләр";
+"share" = "Бүлешергә";
+"pin" = "Беркетергә";
+"unpin" = "Беркетүне сүндерергә";
+"pinned" = "беркетелгән";
+"comments_tip" = "Беренче булып фикер калдырыгыз!";
+"your_comment" = "Сезнең фикер";
+"auditory" = "Тыңлаучылар";
+"in_wall" = "стенага";
+"in_group" = "төркемгә";
+"shown" = "Күрсәтелгән";
+"x_out_of" = "$1 / $2";
+"wall_zero" = "язмалар юк";
+"wall_one" = "бердәнбер язма";
+"wall_few" = "$1 язма";
+"wall_many" = "$1 язма";
+"wall_other" = "$1 язма";
+"publish_post" = "Язма өстәү";
+"view_other_comments" = "Башка фикерләрне карарга";
+"no_comments" = "Фикерләр юк";
+"my_news" = "Минем яңалыклар";
+"all_news" = "Барлык яңалыклар";
+"posts_per_page" = "Биттә күрсәтелгән язмалар саны";
+"show_ignored_sources" = "Игълан ителмәгән чыганакларны күрсәтергә";
+"auto_scroll" = "Автошуып бару";
+"ajax_routing" = "AJAX күчешләре";
+"attachment" = "Теркәү";
+"post_as_group" = "Берләшмә исеменнән";
+"comment_as_group" = "Берләшмә исеменнән";
 
-"add_source" = "Добавление источника";
-"set_source" = "Указать источник";
-"source" = "Источник";
-"set_source_tip" = "Если вы используете материалы других авторов, важно указывать ссылку на оригинал.<br>Сделать это вы можете ниже.";
+"add_source" = "Чыганак өстәү";
+"set_source" = "Чыганак күрсәтү";
+"source" = "Чыганак";
+"set_source_tip" = "Әгәр дә сез башка авторлар материалларын кулланасыз икән, оригинал чыганакка сылтама күрсәтү мөһим.<br>Сез моны түбәндә эшли аласыз.";
 
-"add_signature" = "Подпись автора";
-"contains_nsfw" = "Содержит NSFW-контент";
-"nsfw_warning" = "Данный пост может содержать 18+ контент";
-"report" = "Пожаловаться";
-"attach" = "Прикрепить";
-"detach" = "Открепить";
-"attach_photo" = "Прикрепить фото";
-"attach_video" = "Прикрепить видео";
-"attach_geotag" = "Прикрепить геометку";
-"draw_graffiti" = "Нарисовать граффити";
-"no_posts_abstract" = "Здесь никто ничего не написал... Пока.";
-"attach_no_longer_available" = "Это вложение больше недоступно.";
-"open_post" = "Открыть запись";
-"version_incompatibility" = "Не удалось отобразить это вложение. Возможно, база данных несовместима с текущей версией OpenVK.";
+"add_signature" = "Автор имзасы";
+"contains_nsfw" = "NSFW контент бар";
+"nsfw_warning" = "Бу пост 18+ контентны эчендә тотарга мөмкин";
+"report" = "Шикаять итәргә";
+"attach" = "Беркетергә";
+"detach" = "Аерырга";
+"attach_photo" = "Фотосурәт беркетергә";
+"attach_video" = "Видео беркетергә";
+"attach_geotag" = "Геотег беркетергә";
+"draw_graffiti" = "Граффити ясарга";
+"no_posts_abstract" = "Монда беркем дә бернәрсә язмаган... Әлегә.";
+"attach_no_longer_available" = "Бу теркәлгән файл хәзер эшләми.";
+"open_post" = "Язманы ачу";
+"version_incompatibility" = "Бу теркәлгән файлны күрсәтеп булмый. База мәгълүматы OpenVK версиясе белән туры килмәскә мөмкин.";
 "graffiti" = "Граффити";
-"reply" = "Ответить";
-"post_is_ad" = "Этот пост был размещён за взятку.";
+"reply" = "Җавап бирергә";
+"post_is_ad" = "Бу пост ришвәт өчен урнаштырылган.";
 "edited_short" = "ред.";
 
-"feed_settings" = "Настройки ленты";
-"ignored_sources" = "Игнорируемые источники";
-"ignore_user" = "Игнорировать пользователя";
-"unignore_user" = "Не игнорировать пользователя";
+"feed_settings" = "Яңалыклар тасмасы көйләүләре";
+"ignored_sources" = "Игълан ителмәгән чыганаклар";
+"ignore_user" = "Кулланучыны игълан итмәскә";
+"unignore_user" = "Кулланучыны кабул итәргә";
 
-"ignore_club" = "Игнорировать группу";
-"unignore_club" = "Не игнорировать группу";
-"no_ignores_count" = "Игнорируемых источников нет.";
-"stop_ignore" = "Не игнорировать";
-"start_from_page" = "Начинать со страницы";
+"ignore_club" = "Төркемне игълан итмәскә";
+"unignore_club" = "Төркемне кабул итәргә";
+"no_ignores_count" = "Игълан ителмәгән чыганаклар юк.";
+"stop_ignore" = "Игълан итмәүне туктату";
+"start_from_page" = "Биттән башлау";
 
-"all_posts" = "Все записи";
-"users_posts" = "Записи $1";
-"clubs_posts" = "Записи сообщества";
-"others_posts" = "Чужие записи";
-"show_more" = "Показать больше";
-"has_repost" = "Содержит репост";
+"all_posts" = "Барлык язмалар";
+"users_posts" = "$1 язмалары";
+"clubs_posts" = "Берләшмә язмалары";
+"others_posts" = "Башка кешеләрнең язмалары";
+"show_more" = "Тагын күрсәтергә";
+"has_repost" = "Репост бар";
 
-"likers_list" = "Список лайкнувших";
-"liked_verb" = "Понравилось";
+"likers_list" = "Ошатучылар исемлеге";
+"liked_verb" = "Ошатылды";
 
-"liked_by_x_people_one" = "Понравилось $1 человеку";
-"liked_by_x_people_few" = "Понравилось $1 людям";
-"liked_by_x_people_many" = "Понравилось $1 людям";
-"liked_by_x_people_other" = "Понравилось $1 людям";
-"liked_by_x_people_zero" = "Никому не понравилось";
+"liked_by_x_people_one" = "$1 кешегә ошады";
+"liked_by_x_people_few" = "$1 кешегә ошады";
+"liked_by_x_people_many" = "$1 кешегә ошады";
+"liked_by_x_people_other" = "$1 кешегә ошады";
+"liked_by_x_people_zero" = "Беркемгә дә ошады түгел";
 
-"geo_place" = "Место";
+"geo_place" = "Урын";
 "geotag" = "Геолокация";
-"nearest_posts" = "Ближайшие посты";
-"Latitude" = "Широта";
-"longitude" = "Долгота";
-"name_of_the_place" = "Название места";
-"no_nearest_posts" = "Нет ближайших постов";
-"shown_last_nearest_posts" = "Показаны последние $1 постов за месяц";
+"nearest_posts" = "Иң якын язмалар";
+"Latitude" = "Киңлек";
+"longitude" = "Озынлык";
+"name_of_the_place" = "Урынның исеме";
+"no_nearest_posts" = "Якында язмалар юк";
+"shown_last_nearest_posts" = "Соңгы $1 ай эчендә урнаштырылган язмалар күрсәтелде";
 
-"change_geo_name" = "Изменить название точки";
-"change_geo_name_new" = "Новое название";
+"change_geo_name" = "Урын исемен үзгәртергә";
+"change_geo_name_new" = "Яңа исем";
 
 /* Friends */
 
