--- a/locales/tt.strings
+++ b/locales/tt.strings
@@ -613,17 +613,17 @@
 
 "edit_button" = "ред.";
 
-"my_page" = "Минем битем";
-"my_friends" = "Минем Дусларым";
-"my_photos" = "Минем Фотографияләр";
-"my_videos" = "Минем Видеоязмалар";
-"my_messages" = "Минем Хәбәрләрем";
-"my_notes" = "Минем Язмаларым";
-"my_audios" = "Минем Аудиоязмалар";
-"my_groups" = "Минем Төркемнәр";
-"my_feed" = "Минем Яңалыклар";
-"my_feedback" = "Минем Җавапларым";
-"my_settings" = "Минем Настройкалар";
+"my_page" = "Битем";
+"my_friends" = "Дусларым";
+"my_photos" = "Фотографияләрем";
+"my_videos" = "Видеоязмаларым";
+"my_messages" = "Хәбәрләрем";
+"my_notes" = "Язмаларым";
+"my_audios" = "Аудиоязмаларым";
+"my_groups" = "Төркемнәрем";
+"my_feed" = "Яңалыкларым";
+"my_feedback" = "Җавапларым";
+"my_settings" = "Настройкаларым";
 "bug_tracker" = "Баг-трекер";
 
 "menu_settings" = "Настройкалар";
