--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -624,6 +624,8 @@
 "my_feed" = "Мои Новости";
 "my_feedback" = "Мои Ответы";
 "my_settings" = "Мои Настройки";
+"bookmarks" = "Закладки";
+"bookmarks_tab" = "Избранное";
 "bug_tracker" = "Баг-трекер";
 
 "menu_settings" = "Настройки";
@@ -2008,6 +2010,7 @@
 "s_apps" = "Приложения";
 "s_posts" = "Записи";
 "s_comments" = "Комментарии";
+"s_photos" = "Фотографии";
 "s_videos" = "Видео";
 "s_audios" = "Аудио";
 "s_audios_playlists" = "Плейлисты";
@@ -2280,3 +2283,17 @@
 "select_doc" = "Выбор документа";
 "no_documents" = "Документов нет";
 "go_to_my_documents" = "Перейти к своим документам";
+
+/* Fave */
+
+"faves" = "Закладки";
+"faves_empty_tip" = "Здесь будет отображаться понравившийся Вам контент...";
+"faves_posts_empty_tip" = "Здесь будут отображаться понравившиеся Вам записи.";
+"faves_comments_empty_tip" = "Здесь будут отображаться понравившиеся Вам комментарии.";
+"faves_photos_empty_tip" = "Здесь будут отображаться понравившиеся Вам фотографии.";
+"faves_videos_empty_tip" = "Здесь будут отображаться понравившиеся Вам видео.";
+"faves_zero" = "Ни одной закладки"; /* на украинском можно как ни одной вподобайки */
+"faves_one" = "Одна закладка";
+"faves_few" = "$1 закладки";
+"faves_many" = "$1 закладок";
+"faves_other" = "$1 закладок";
