--- a/locales/en.strings
+++ b/locales/en.strings
@@ -703,6 +703,7 @@
 "round_avatars" = "Round";
 
 "apply_style_for_this_device" = "Apply style only for this device";
+"ui_settings_window" = "Advanced settings";
 
 "search_for_groups" = "Search for groups";
 "search_for_users" = "Search for users";
