--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -676,6 +676,7 @@
 "cut" = "Квадратные";
 "round_avatars" = "Круглые";
 "apply_style_for_this_device" = "Применить стиль только для этого устройства";
+"ui_settings_window" = "Дополнительные настройки";
 "search_for_groups" = "Поиск групп";
 "search_for_users" = "Поиск людей";
 "search_for_posts" = "Поиск записей";
