--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -597,6 +597,8 @@
 "my_feedback" = "Мої Відповіді";
 "my_apps" = "Застосунки";
 "my_settings" = "Мої Налаштування";
+"bookmarks" = "Вподобані";
+"bookmarks_tab" = "Вподобане";
 "bug_tracker" = "Баг-трекер";
 
 "menu_settings" = "Налаштування";
@@ -1977,6 +1979,7 @@
 "s_apps" = "Застосунки";
 "s_posts" = "Дописи";
 "s_comments" = "Коментарі";
+"s_photos" = "Фотографії";
 "s_videos" = "Відео";
 "s_audios" = "Музика";
 "s_audios_playlists" = "Списки відтворення";
@@ -2237,4 +2240,18 @@
 "documents_sort_size" = "За розміром";
 "select_doc" = "Вибір документа";
 "no_documents" = "Документів немає";
-"go_to_my_documents" = "Перейти до моїх документів";
+"go_to_my_documents" = "Перейти до Моїх документів";
+
+/* Fave */
+
+"faves" = "Закладки";
+"faves_empty_tip" = "Тут відображатиметься вподобаний Вами контент...";
+"faves_posts_empty_tip" = "Тут відображатимуться вподобані Вами дописи.";
+"faves_comments_empty_tip" = "Тут відображатимуться вподобані Вами коментарі.";
+"faves_photos_empty_tip" = "Тут відображатимуться вподобані Вами фотографії.";
+"faves_videos_empty_tip" = "Тут відображатимуться вподобані Вами відеозаписи.";
+"faves_zero" = "Жодного вподобання";
+"faves_one" = "Одна вподобання";
+"faves_few" = "$1 вподобання";
+"faves_many" = "$1 вподобань";
+"faves_other" = "$1 вподобань";
