--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -649,6 +649,7 @@
 "cut" = "Квадратні";
 "round avatars" = "Круглі";
 "apply_style_for_this_device" = "Застосувати стиль лише для цього пристрою";
+"ui_settings_window" = "Додаткові налаштування";
 "search_for_groups" = "Пошук спільнот";
 "search_for_users" = "Пошук користувачів";
 "search_for_posts" = "Пошук дописів";
@@ -855,7 +856,8 @@
 "audio_embed_deleted" = "Аудіозапис видалено";
 "audio_embed_withdrawn" = "Аудіозапис було вилучено на вимогу правовласника";
 "audio_embed_forbidden" = "Налаштування конфіденційності користувача не дозволяють вбудовувати цей аудіозапис";
-"audio_embed_processing" = "Аудіозапис ще обробляється або було оброблено неправильно.";
+"audio_embed_processing" = "Аудіозапис ще обробляється або був неправильно оброблений.";
+"audio_embed_processing_bait" = "Все одно відтворити";
 
 "audios_count_zero" = "Немає аудіозаписів";
 "audios_count_one" = "Один аудіозапис";
@@ -874,6 +876,7 @@
 "audio_search" = "Пошук";
 
 "my_audios_small" = "Мої аудіозаписи";
+"my_audios_small_uploaded" = "Завантажене";
 "my_playlists" = "Мій список відтворення";
 "playlists" = "Списки відтворення";
 "audios_explicit" = "Має нецензурну лексику";
@@ -963,6 +966,12 @@
 "audio_ctx_add_to_playlist" = "Додати до списку відтворення";
 "audio_ctx_play_next" = "Відтворити наступним";
 "audio_ctx_clear_context" = "Очистити список аудіозаписів";
+
+"is_x_audio_zero" = "Немає аудіозаписів";
+"is_x_audio_one" = "Один аудіозапис.";
+"is_x_audio_few" = "Всього $1 аудіозаписа.";
+"is_x_audio_many" = "Всього $1 аудіозаписів.";
+"is_x_audio_other" = "Всього $1 аудіозаписів.";
 
 /* Notifications */
 
@@ -2090,7 +2099,8 @@
 "mobile_menu" = "Меню";
 "mobile_like" = "Подобається";
 "mobile_user_info_hide" = "Приховувати";
-"mobile_user_info_show_details" = "Показати докладніше";
+"mobile_user_info_show_details" = "Відобразити докладніше";
+"mobile_attachment_only_for_pc" = "Вкладення недоступне в PDA версії, його перегляд можливий тільки з іншого пристрою";
 "my" = "Мої";
 "enter_a_name_or_artist" = "Введіть назву або виконавця...";
 
