--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -2217,6 +2217,8 @@
 "roll_back" = "откатить";
 "roll_backed" = "откачено";
 
+"nospam_prevention" = "Данное действие затронет множество данных. Вы действительно хотите применить?";
+
 /* RSS */
 
 "post_deact_in_general" = "Удаление страницы";
