--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -826,6 +826,9 @@
 "sort_up" = "Сортировать по дате создания вверх";
 "sort_down" = "Сортировать по дате создания вниз";
 
+"new_first" = "Сначала новые";
+"old_first" = "Сначала старые";
+
 /* Videos */
 
 "videos" = "Видеозаписи";
