feat: "sent" at gifts page

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1142,6 +1142,7 @@
 "coins_many" = "$1 голосов";
 "coins_other" = "$1 голосов";
 "users_gifts" = "Подарки";
+"sent" = "Отправлено";
 
 /* Apps */
 "app" = "Приложение";
