--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -489,7 +489,7 @@
 "edit_photo" = "Изменить фотографию";
 "creating_album" = "Создание альбома";
 "delete_photo" = "Удалить фотографию";
-"sure_deleting_photo" = "Вы уверены, что хотите удалить эту фотографию?";
+"sure_deleting_photo" = "Вы уверены, что хотите удалить эту фотографию из альбома?";
 "upload_photo" = "Загрузить фотографию";
 "photo" = "Фотография";
 "upload_button" = "Загрузить";
