feat(user>groups): make the search bar and create group button more accessible
Повторяет вид отсюда: https://archive.is/hZ59B

--- a/locales/id.strings
+++ b/locales/id.strings
@@ -290,11 +290,7 @@
 "meetings_one" = "$1 rapat/pertemuan";
 "meetings_other" = "$1 rapat/pertemuan";
 
-"open_new_group" = "Open a new group";
-"open_group_desc" = "Can't find the right group? Open your own...";
-"search_group" = "Cari grup";
-"search_by_groups" = "Search by groups";
-"search_group_desc" = "Here you can browse through the existing groups and choose a group to suit your needs...";
+"search_by_groups" = "Cari grup";
 
 /* Albums */
 
