add limitation errors to api

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1561,6 +1561,8 @@
 "error_geolocation" = "Ошибка при прикреплении геометки";
 "error_no_geotag" = "У поста не указана гео-метка";
 
+"limit_exceed_exception" = "Вы совершаете это действие слишком часто. Повторите позже.";
+
 /* Admin actions */
 
 "login_as" = "Войти как $1";
